# aoc-2020-c

./: CMakeLists.txt  README.md
src/: day01.c  day01.h  day02.c  day02.h  day03.c  day03.h  file_utils.c  file_utils.h
src/cmd/: day01a.c  day01b.c  day02a.c  day02b.c  day03a.c  day03b.c
